pkl-core/src/test/files/LanguageSnippetTests/output/errors/reference28.pcf
res0 = ""
res1 = "parent"
res2 = "parent.parent"
res3 = "children.0"
res4 = "children.0.parent"
res5 = "children.0.children.0"
res0a = ""
res1a = "parent"
res2a = "parent.parent"
res3a = "children.0"
res4a = "children.0.parent"
res5a = "children.0.children.0"
